--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,2 +1,12 @@
 polar:
   greeting: Welcome to the local book catalog from config server!
+eureka:
+  instance:
+    hostname: localhost
+    ip-address: 127.0.0.1
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8070/eureka/
